--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
+    <meta name="keywords" content="Manicuria, uñas, belleza, manos, India, nails, nailart">
+    <meta name="description" content="Aquí podrás ponerte en contacto con nosotras">
+    <title>India Nails | Contacto</title>
     <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/grids.css">
 </head>
