--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Servicios</title>
+    <meta name="keywords" content="Manicuria, uñas, belleza, manos, India, nails, nailart">
+    <meta name="description" content="Aquí conocerás nuestros servicios">
+    <title>India Nails | Servicios</title>
     <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/prueba.css">
 </head>
@@ -50,7 +52,7 @@
 
       <!--  -->
 
-        <div class="servicios__diferentes servicios__diferentes--scale">
+        <div class="servicios__diferentes servicios__diferentes--scale bg--anteriores">
 
             <img class="servicios__img" src="../img/uñas1.jpg" alt="uñas1" width="150px" height="150px">
 
@@ -65,7 +67,7 @@
         </div>
 
 
-        <div class="servicios__diferentes servicios__diferentes--scale">
+        <div class="servicios__diferentes servicios__diferentes--scale bg--anteriores">
 
             <img class="servicios__img" src="../img/uñas2.jpg" alt="uñas2" width="150" height="150">
 
@@ -80,7 +82,7 @@
         </div>
 
 
-        <div class="servicios__diferentes servicios__diferentes--scale">
+        <div class="servicios__diferentes servicios__diferentes--scale bg--nuevos">
 
             <img class="servicios__img" src="../img/uñas3.jpg" alt="uñas3" width="150" height="150">
 
@@ -95,7 +97,7 @@
 
         </div>
 
-        <div class="servicios__diferentes servicios__diferentes--scale">
+        <div class="servicios__diferentes servicios__diferentes--scale bg--nuevos">
 
             <img class="servicios__img" src="../img/uñas4.jpg" alt="uñas4" width="150" height="150">
 
@@ -109,7 +111,7 @@
 
         </div>
 
-        <div class="servicios__diferentes servicios__diferentes--scale">
+        <div class="servicios__diferentes servicios__diferentes--scale bg--obsoletos">
 
             <img class="servicios__img" src="../img/uñas1.jpg" alt="uñas1" width="150" height="150">
 
@@ -124,7 +126,7 @@
         </div>
 
 
-        <div class="servicios__diferentes servicios__diferentes--scale">
+        <div class="servicios__diferentes servicios__diferentes--scale bg--obsoletos">
 
             <img class="servicios__img" src="../img/uñas2.jpg" alt="uñas2" width="150" height="150">
 
@@ -138,7 +140,7 @@
 
         </div>
 
-        <div class="servicios__diferentes servicios__diferentes--scale">
+        <div class="servicios__diferentes servicios__diferentes--scale bg--obsoletos">
 
             <img class="servicios__img" src="../img/uñas3.jpg" alt="uñas3" width="150" height="150">
 
@@ -153,7 +155,7 @@
 
         </div>
 
-        <div class="servicios__diferentes servicios__diferentes--scale">
+        <div class="servicios__diferentes servicios__diferentes--scale bg--obsoletos">
 
             <img class="servicios__img" src="../img/uñas4.jpg" alt="uñas4" width="150" height="150">
 
